--- a/.github/workflows/postgres.yml
+++ b/.github/workflows/postgres.yml
@@ -26,9 +26,9 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  runs-on: ubuntu-latest
-  container-job1:
-    container: node:10.18-jessie
+  container-job:
+    runs-on: ubuntu-latest
+    container: node:14.15.0-alpine3.12
     services:
       postgres:
         image: postgres
@@ -57,7 +57,5 @@ jobs:
         # The workflow sets those two environment variables as part of the "Connect to Redis" step to make them available to the client.js script.
         env:
           # The hostname used to communicate with the Redis service container
-          REDIS_HOST: redis
-
-    
-        
+          POSTGRES_HOST: postgres
+          POSTGRES_PORT: 5432
