--- a/.github/workflows/CronSchedulenCreateIssue.yml
+++ b/.github/workflows/CronSchedulenCreateIssue.yml
@@ -5,7 +5,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the master branch
   schedule:
   # Runs every 2 mins
-    - cron: 2 * * * *
+    - cron: 1 * * * *
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,25 +22,25 @@ jobs:
     - name: Print Job starting message
       run: echo "Starting cron job at ${{ date }}"
 
-    - name: Create team sync issue
-      uses: imjohnbo/issue-bot@3daae12aa54d38685d7ff8459fc8a2aee8cea98b
-      with:
-        assignees: "ankush56"
-        labels: "weekly sync, docs-team"
-        title: "Team sync"
-        body: |
-            ### Agenda
+    # - name: Create team sync issue
+    #   uses: imjohnbo/issue-bot@3daae12aa54d38685d7ff8459fc8a2aee8cea98b
+    #   with:
+    #     assignees: "ankush56"
+    #     labels: "weekly sync, docs-team"
+    #     title: "Team sync"
+    #     body: |
+    #         ### Agenda
 
-            - [ ] Start the recording
-            - [ ] Check-ins
-            - [ ] Discussion points
-            - [ ] Post the recording
+    #         - [ ] Start the recording
+    #         - [ ] Check-ins
+    #         - [ ] Discussion points
+    #         - [ ] Post the recording
                     
-            ### Discussion Points
-            Add things to discuss below
+    #         ### Discussion Points
+    #         Add things to discuss below
 
-            - [Work this week](https://github.com/orgs/github/projects/3)
-        pinned: false
-        close-previous: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #         - [Work this week](https://github.com/orgs/github/projects/3)
+    #     pinned: false
+    #     close-previous: false
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
