--- a/.github/workflows/CronSchedulenCreateIssue.yml
+++ b/.github/workflows/CronSchedulenCreateIssue.yml
@@ -5,7 +5,7 @@ on:
   # Triggers the  workflow on push or pull request events but only for the master branch
   schedule:
   # Runs every 2 mins
-    - cron: "*/1 * * * *"
+    # - cron: "*/1 * * * *"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
