--- a/.github/workflows/CronSchedulenCreateIssue.yml
+++ b/.github/workflows/CronSchedulenCreateIssue.yml
@@ -3,7 +3,7 @@ name: Create Issue
 # Controls when the workflow will run 
 on:
   # Triggers the  workflow on push or pull request events but only for the master branch
-  schedule:
+  # schedule:
   # Runs every 2 mins
     # - cron: "*/1 * * * *"
   # Allows you to run this workflow manually from the Actions tab
